# vscode-dark-cool

./: .vscodeignore  CHANGELOG.md  LICENSE  README.md  package.json  pyproject.toml
.todo/: done.txt  todo.txt  todo.txt.bak
docs/: README.tpl.md  dev-notes.md  screenshots.md
properties/: ariake.yml  colors.jsonc  colors.yml  tokens.jsonc  tokens.yml
samples/: fibo.py  sample.scss  user.js
screenshots/: side-by-side.ai
themes/: dark-cool-color-theme.json
tools/: before  build  extensions  extract  fetch-swatch  generate  json2yml
