[tool.poetry]
name = "dark-cool-vscode-tools"
version = "0.1.0"
description = ""
authors = ["Alissa Huskey <alissa.huskey@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
tabulate = "^0.8.7"
click = "^7.1.2"
PyYAML = "^5.4.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
